public/css/native.css
/* ... */
.bg-success {
    background-color: var(--primary-color);
    color: var(--almost-white);
}
.bg-info {
    background-color: var(--third-color);
    color: var(--almost-white);
}
.nav--showed {
    position: fixed;
    padding-bottom: 15px;
    background-color: #fff;
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.13) !important;
    top: 0;
}
nav .container {
    max-width: none;
    display: flex;
    flex-direction: column;
    height: 100%;
    padding: 0;
    width: 90%;
}
.nav__toggle {
    color: var(--almost-white);
    font-size: 30px;
}
.nav__list {
    background-color: inherit;
    transition: all 150ms;
    display: flex;
    align-items: center;
    color: #fff;
    text-shadow: 2px 3px rgba(52, 52, 52, 0.5);
    overflow: hidden;
}
.nav__list:not(.nav__list--logo) {
    max-height: 0;
    padding: 0;
    position: relative;
    text-transform: capitalize;
}
.nav__list:not(.nav__list--logo):hover {
    text-shadow: none;
}
.nav__list:not(.nav__list--logo):not(.nav__list--dropdown):not(.nav__list--search)::after {
    content: '';
    position: absolute;
    bottom: 0;
    width: 0;
    left: 0;
    transition: all 350ms;
    height: 3px;
}
.nav__list:not(.nav__list--logo):not(.nav__list--search):hover::after {
    width: 100%;
}
.nav__list--separate:hover::after {
    width: calc(100% - 20px) !important;
}
.nav__list--dropdown {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.nav__list--dropdown .dropdown-icon {
    transition: all 150ms;
    margin-left: 10px;
}
.nav-dropdown-list {
    width: 0;
    overflow: hidden;
    max-height: 0;
    transition: max-height 150ms;
    padding-left: 20px;
    flex-direction: column;
}
.nav-dropdown-list.nav-dropdown-list--showed {
    max-height: none;
    z-index: 2;
    width: 150%;
    padding-top: 10px;
}
.nav--showed .nav__list:not(.nav__list--logo) .nav-dropdown-list__item:first-child {
    padding-top: 20px;
}
.nav--showed .nav-dropdown-list--showed .dropdown-icon {
    transform: rotate(180deg);
}
.nav__link {
    flex-grow: 1;
    cursor: pointer;
    display: flex;
    height: 100%;
    align-items: center;
    color: inherit;
}
.nav__link:hover {
    color: inherit;
    text-decoration: none;
}
.nav__list--logo {
    font-family: 'Montserrat', sans-serif;
    color: #e7e7e7;
    font-size: 35px;
    font-weight: 600;
    height: 80px;
}
body[id^='blog'] .nav__list--logo {
    font-size: 1em;
}
.nav--showed .nav__list--search {
    margin: 0;
}
.nav--showed .nav__list:not(.nav__list--logo) {
    max-height: none;
    padding: 10px 0;
}
.nav--showed .nav__list {
    text-shadow: none;
    color: #383838;
}
body[id^='blog'] .nav--showed .nav__list {
    color: var(--almost-white);
}
.nav--showed .nav__list--logo {
    color: #383838;
}
.nav__list--search {
    flex-grow: 1;
}
.search-service {
    position: relative;
    display: block;
}
.nav--showed .search-service {
    width: 100%;
}
.search-service__input {
    height: 40px;
    padding: 0 10px 0 50px;
    width: 100%;
    border: 1px solid #c7c7c7;
    border-radius: 5px;
}
.search-service__btn {
    cursor: pointer ;
    color: #fff;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    height: 40px;
    width: 40px;
    font-size: 20px;
    border-radius: 5px 0 0 5px;
    border: none;
    background-color: var(--primary-color);
}
.search-service__btn:hover {
    background-color: var(--primary-color);
}

.card {
    display: flex;
    flex-direction: column;
    background-color: var(--almost-white);
    background-clip: border-box;
    border: 1px solid rgba(0,0,0,.125);
    border-radius: 0.25rem;
    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
}

.input-custom {
    background-color: #fff;
    padding: 10px 1rem;
    width: 100%;
    border: 1px solid #dddddd;
    border-radius: 5px;
}
.input-custom--rounding {
    border-radius: 1rem;
}
.checkbox-custom {
    position: relative;
    display: flex;
    align-items: center;
    min-height: 1.5rem;
    text-indent: 1.5rem;
}
.checkbox-custom + .checkbox-custom {
    margin-top: 1rem;
}
.checkbox-custom__input {
    position: absolute;
    left: 0;
    z-index: -1;
    width: 1rem;
    height: 1.25rem;
    opacity: 0;
}
.checkbox-custom__input:disabled {
    opacity: 0.8;
}
.checkbox-custom__icon {
    position: absolute;
    left: -1.5rem;
    font-size: 1rem;
    color: var(--primary-color);
    transition: all 150ms;
    display: flex;
    align-items: center;
    justify-content: center;
    top: 0;
    opacity: 0;
    visibility: hidden;
}
.checkbox-custom__input:checked + .checkbox-custom__label .checkbox-custom__icon {
    opacity: 1;
    visibility: visible;
}
.checkbox-custom__icon i {
    font-weight: bold;
}
.checkbox-custom__label {
    position: relative;
    margin-bottom: 0;
    vertical-align: top;
}
.checkbox-custom__label::before {
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 1rem;
    height: 1rem;
    pointer-events: none;
    content: "";
    background-color: #fff;
    border: #adb5bd solid 1px;
    border-radius: .25rem;
    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}
.checkbox-custom__input:disabled + .checkbox-custom__label::before {
    background-color: #e9ecef;
}
.checkbox-custom__input:disabled + .checkbox-custom__label {
    color: #7b7b7b;
}
.float-right {
    float: right !important;
}
.float-left {
    float: left !important;
}
.text-small {
    font-size: 0.8rem;
}
.btn-danger {
    background-color: #ff5a4f;
    color: #fff;
    padding: 10px 1rem;
    border-radius: 5px;
    display: inline-block;
    cursor: pointer;
    align-items: center;
    justify-content: center;
    border: 1px solid #ff5a4f;
    box-shadow: 0 4px 3px rgba(41, 41, 41, 0.2);
}
.btn-danger:hover {
    background-color: #e6483e;
}
.btn-blue {
    color: #fff;
    background-color: var(--third-color) !important;
}
/* ... */

